--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,32 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.navbar {
+    position: absolute;
+    top: 0;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    font-family: cursive;
+    padding:5px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .navbar a {
+    text-decoration: none;
+    color: red;
+    font-size: 18px;
+    padding: 10px 15px;
+    transition: all 0.3s ease; 
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  
+  .navbar a:hover {
+    color: #ff6347; 
+    transform: scale(1.1); 
+    font-weight: bold; 
   }
-}
+  
+  
 
-.card {
-  padding: 2em;
-}
 
-.read-the-docs {
-  color: #888;
-}
+
+
+
